<resources>
    <string name="app_name" translatable="false">my app</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="one">News</string>
    <string name="two">Deals</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_article2" translatable="false">Article2</string>

    <string name="title_activity_fullscreen" translatable="false">my app</string>

    <string name="dummy_content" translatable="false">my app</string>


    <!-- local storage of this application -->
    <string name="local_storage_filename" translatable="false">stoixeia</string>
    <string name="ls_have_seen_first_slider" translatable="false">firstslider</string>
    <string name="ls_login">Login</string>
    <string name="ls_already_alert_connection" translatable="false">connectionalert</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="terms">Terms &amp; conditions</string>

    <!-- My App Strings -->
    <string name="everything_you_need_one_app">Everything you need, in one app!</string>
    <string name="news_tab">N e w s</string>
    <string name="deals_tab">D e a l s</string>
    <string name="skip">Skip this</string>
    <string name="slide_1_desc">Description</string>
    <string name="choose_language">Select language:</string>
    <string name="language_greek">Ελληνικά</string>
    <string name="language_english">English</string>
    <string name="settings">Settings</string>

    <string name="travel">travel</string>
    <string name="beauty">beauty</string>
    <string name="needs">everyday needs</string>
    <string name="wallet">wallet</string>
    <string name="loyalty">loyalty</string>
    <string name="deals_intro">deals</string>
    <string name="my_wallet">my wallet</string>
    <string name="coming_soon">Coming soon</string>

</resources>
