<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_language"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gr.myapp.app.ChooseLanguageActivity"
    android:background="@color/accent"
    >

    <ImageView
        android:id="@+id/language_logo"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo_purple"
        />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_language"
        android:layout_below="@id/language_logo"
        android:layout_marginTop="70dp"
        android:textAlignment="center"
        android:textSize="25dp"
        android:id="@+id/choose_language_title"
        android:textStyle="normal"
        android:typeface="sans"
        android:fontFamily="sans-serif-light"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/choose_language_title"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_greek"
            android:id="@+id/language_greek"
            android:layout_marginTop="50dp"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#A6ABEA"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_english"
            android:id="@+id/language_english"
            android:layout_marginTop="30dp"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#A6ABEA"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:src="@drawable/proceed_btn"
            android:layout_marginTop="60dp"
            android:id="@+id/proceed_btn"
            />

    </LinearLayout>

</RelativeLayout>
