<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:background="@drawable/menu_bg"
        android:padding="17dp"
        android:orientation="horizontal"
        android:id="@+id/linearIntro"
        android:layout_alignParentTop="true"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/my_app_intro_logo"
                android:layout_weight="1"
                android:id="@+id/imageView4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            android:gravity="end"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/my_app_intro_logo_paperclip"
                android:layout_weight=".6"
                android:layout_gravity="end"
                />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/everything_you_need_one_app"
        android:textColor="@android:color/darker_gray"
        android:textSize="20dp"
        android:textStyle="normal"
        android:typeface="sans"
        android:fontFamily="sans-serif-light"
        android:layout_below="@id/linearIntro"
        android:textAlignment="center"
        android:id="@+id/introPhrase"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_below="@id/introPhrase"
        android:id="@+id/introActions"
        android:background="@color/accent"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="15dp"

            android:layout_marginTop="15dp"
            android:src="@drawable/intro_left_arrow"
            android:id="@+id/introLeftArrow"
            />
        </LinearLayout>

        <!--<ImageView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="60dp"-->
            <!--android:layout_weight="6"-->
            <!--android:scaleType="fitCenter"-->
            <!--android:src="@drawable/intro_cat_01"-->
            <!--android:id="@+id/imageView3" />-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:orientation="vertical"
            >

            <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:scaleType="fitCenter"
            android:src="@drawable/intro_travel_black"
            android:id="@+id/introAction1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/travel"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:id="@+id/introActionLabel1"
                android:textSize="8dp"
                android:paddingTop="6dp"
                android:visibility="visible"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/intro_beauty_gray"
                android:id="@+id/introAction2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beauty"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:id="@+id/introActionLabel2"
                android:textSize="8dp"
                android:paddingTop="6dp"
                android:visibility="gone"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/intro_home_needs_gray"
                android:id="@+id/introAction3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/needs"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:id="@+id/introActionlabel3"
                android:textSize="8dp"
                android:paddingTop="6dp"
                android:visibility="gone"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/intro_wallet_gray"
                android:id="@+id/introAction4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wallet"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:id="@+id/introActionLabel4"
                android:textSize="8dp"
                android:paddingTop="6dp"
                android:visibility="gone"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/intro_reward_gray"
                android:id="@+id/introAction5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loyalty"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:id="@+id/introActionLabel5"
                android:textSize="8dp"
                android:paddingTop="6dp"
                android:visibility="gone"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/intro_deals_near_me_gray"
                android:id="@+id/introAction6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deals_intro"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:id="@+id/introActionLabel6"
                android:textSize="8dp"
                android:paddingTop="6dp"
                android:visibility="gone"
                />

        </LinearLayout>


        <ImageView
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight=".7"
            android:layout_marginTop="15dp"
            android:src="@drawable/intro_right_arrow"
            android:id="@+id/introRightArrow"
            />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/introActions"
        android:layout_marginTop="30dp"
        />

    <!--<LinearLayout-->
        <!--android:id="@+id/layoutDots"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/dots_height"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginBottom="@dimen/dots_margin_bottom"-->
        <!--android:gravity="center"-->
        <!--android:orientation="horizontal"></LinearLayout>-->

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:alpha=".5"-->
        <!--android:layout_above="@id/layoutDots"-->
        <!--android:background="@android:color/white" />-->

    <!--<Button-->
        <!--android:id="@+id/btn_next"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:background="@null"-->
        <!--android:text="@string/next"-->
        <!--android:textColor="@android:color/white" />-->

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/skipButtonGrey"
        android:text="@string/skip"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:textSize="17dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        />

</RelativeLayout>